--- a/src/app/spotbie/spotbie-logged-in/qr/qr.component.html
+++ b/src/app/spotbie/spotbie-logged-in/qr/qr.component.html
@@ -46,7 +46,7 @@
 
     <div class='sb-v-wrapper' style="display: block; align-content: center;" *ngIf="rewardPrompted">
 
-        <h5 *ngIf="rewardPrompted" class="spotbie-text-gradient text-center">Let user scan for reward.</h5>
+        <h5 class="spotbie-text-gradient text-center">Let user scan for reward.</h5>
 
         <ngx-qrcode [elementType]="qrType" 
                     [value]="business.qr_code_link"
@@ -103,7 +103,7 @@
 
 <div class='spotbie-overlay-window' style="background-color: #0e0e0e;" *ngIf="!isBusiness">    
 
-    <div class='sb-v-wrapper' style="display: grid; align-content: center;">
+    <div class='sb-v-wrapper'>
 
         <div>
             <img class="sb-qrTitleImage" src="../../../../assets/images/qr/spotbie-qr.svg" />
@@ -111,20 +111,25 @@
             <h5 class="spotbie-text-gradient sb-scanQrTitle text-center text-uppercase mt-5 pt-5">SCAN AND EARN</h5>
         </div>
 
-        <div class="spotbie-full-qrCode scanner mt-4 mb-4">
+        <div class="spotbie-full-qrCode scanner mt-4 mb-4" *ngIf="!awarded">
 
-            <zxing-scanner (scanSuccess)="scanSuccessHandler($event)"
-                           (scanError)="scanErrorHandler($event)"
-                           (scanFailure)="scanFailureHandler($event)"             
-                           [formats]="['QR_CODE', 'EAN_13', 'CODE_128', 'DATA_MATRIX']"></zxing-scanner>
+            <zxing-scanner (scanSuccess)="scanSuccessHandler($event)"           
+                           [formats]="['QR_CODE']"></zxing-scanner>
                            
         </div>
 
-        <p class="sb-helpInfo spotbie-text-gradient text-center text-uppercase mt-5">
+        <h2 class='sb-text-light-green-gradient mt-4' *ngIf="awarded">SUCCESS</h2>
+        <i class='fas fa-check mb-4' *ngIf="awarded"></i>    
+        
+        <p class="sb-helpInfo spotbie-text-gradient text-center text-uppercase" *ngIf="!awarded">
             Ask for<br/>the<br/><span class='sb-text-light-green-gradient'>SpotBie QR CODE</span>
         </p>
         
-        <h2 class="spotbie-text-gradient text-center text-uppercase pt-5 mb-5">{{ userLoyaltyPoints | number:'1.0':'en-US' }}</h2>
+        <div class="sb-text-light-green-gradient sb-earnedPoints animated fadeOutUp" #sbEarnedPoints>
+            +{{ userLoyaltyPoints | number:'1.0':'en-US' }}
+        </div>
+
+        <h2 class="spotbie-text-gradient text-center text-uppercase pt-4 mb-4">{{ userLoyaltyPoints | number:'1.0':'en-US' }}</h2>
 
         <button class='spotbie-button text-uppercase mt-3' (click)="closeQrUser()">close</button>
 
