--- a/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.css
+++ b/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.css
@@ -72,13 +72,27 @@
     right: 4%;
     color: #474747;
 }
-#sign_up_general_instructions{
+.spotbie-forgot-your-pass{
+    position: relative;
     margin: 0 auto;
+    width: 440px;
+    max-width: 440px;
+    margin-top: 0px;
+    text-align: right;
+    font-size: .6rem;
+}
+#sign_up_general_instructions{
+    margin: 0 auto;    
     max-width: 440px;    
     text-align: center;
     padding-bottom: 10px;
     font-size: 13px;
     text-align: left;
+}
+.spotbie-loginWrapper{
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
 }
 /**WIDTH MEDIA QUERIES */
 @media (max-width: 1300px) { }
@@ -108,12 +122,7 @@
     }
 }
 @media (max-width: 560px) { }
-@media (max-width: 460px) { 
-    .spotbie-log-in-picture{
-        height: 250px;
-        min-height: 250px;
-        max-height: 250px;    
-    }     
+@media (max-width: 460px) {     
     .sb-logo{
         max-width: 175px;
         width: 175px;
@@ -123,7 +132,12 @@
     }  
     .spotbie-overlay-window{
         padding-bottom: 100px !important;
-    }          
+    } 
+    .spotbie-forgot-your-pass{
+        width: 90%;
+        min-width: 90%;
+        max-width: 90%;
+    }             
 }
 @media (max-width: 420px){
     #sign_up_general_instructions{
